--- a/2324_fbref_data_scraper.ipynb
+++ b/2324_fbref_data_scraper.ipynb
@@ -44,14 +44,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Setting up a dictionary of league IDs\n",
+    "### Setting up a dictionary of league and season IDs\n",
     "* <b>leagues_url_dict</b> - mapping league inputs to IDs for url requests <br>\n",
-    "* <b>leagues_name_dict</b> - mapping league inputs to readable names for display in tables"
+    "* <b>leagues_name_dict</b> - mapping league inputs to readable names for display in tables\n",
+    "* <b>seasons_dict</b> - mapping season to string for filename"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,6 +78,15 @@
     "    \"Championship\": \"ENG2 Championship\",\n",
     "    \"Serie-B\": \"ITA2 Serie B\",\n",
     "    \"Major-League-Soccer\": \"USA Major League Soccer\"\n",
+    "}\n",
+    "\n",
+    "seasons_dict = {\n",
+    "    \"2023-2024\": \"2324\"\n",
+    "}\n",
+    "\n",
+    "league_dict = {\n",
+    "    \"top8\": \"top_8\"\n",
+    "    \"top5\": \"top_5\"\n",
     "}"
    ]
   },
@@ -87,17 +97,22 @@
     "### Selecting leagues and types of stats to scrape\n",
     "Every combination of items in <b>leagues</b> and <b>stats_reqd</b> will be scraped:<br>\n",
     "* <b>leagues</b> contains the list of leagues to scrape\n",
-    "* <b>stats_reqd</b> contains the list of type of stats to scrape"
+    "* <b>stats_reqd</b> contains the list of type of stats to scrape\n",
+    "* the <b>season</b> from which data is to be gathered"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "leagues = [\"Big5\", \"Eredivisie\", \"Primeira-Liga\", \"Belgian-Pro-League\"]\n",
-    "stats_reqd = [\"stats\", \"shooting\", \"passing\", \"passing_types\", \"gca\", \"defense\", \"possession\", \"misc\"]"
+    "top8 = [\"Big5\", \"Eredivisie\", \"Primeira-Liga\", \"Belgian-Pro-League\"]\n",
+    "top5 = [\"Big5\"]\n",
+    "leagues = top8\n",
+    "league = \"top8\"\n",
+    "stats_reqd = [\"stats\", \"shooting\", \"passing\", \"passing_types\", \"gca\", \"defense\", \"possession\", \"misc\"]\n",
+    "season = \"2023-2024\""
    ]
   },
   {
@@ -181,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -229,7 +244,7 @@
     "    df = pd.DataFrame()\n",
     "    for y in leagues:\n",
     "        import_start = timeit.default_timer()\n",
-    "        df = pd.concat([df, clean(y, \"2023-2024\", x)], axis=0, sort=False).reset_index(drop=True)\n",
+    "        df = pd.concat([df, clean(y, season, x)], axis=0, sort=False).reset_index(drop=True)\n",
     "        time.sleep(6)\n",
     "        import_stop = timeit.default_timer()\n",
     "        print(\"Imported %s %s in %.2f seconds\" % (y, x, import_stop - import_start))\n",
@@ -326,11 +341,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataset.to_csv(\"2324_top_8_raw.csv\", encoding=\"utf-8\", index=False)"
+    "filename = f\"{seasons_dict[season]}_{league_dict[league]}_raw.csv\"\n",
+    "dataset.to_csv(filename, encoding=\"utf-8\", index=False)"
    ]
   }
  ],
